Cabal-tests/tests/ParserTests/errors/anynone.cabal
cabal-version:       3.4
name:                anynone
version:             0
synopsis:            The -any none demo
build-type:          Simple

library
  default-language: Haskell2010
  exposed-modules:  AnyNone
  build-depends:    base -any
